@@ -30,9 +30,8 @@
 #define BRANDY_NAME  "Matrix"
 #define BRANDY_MAJOR "1"
 #define BRANDY_MINOR "21"
-#define BRANDY_PATCHLEVEL "17"
-#define BRANDY_DATE  "05 Dec 2018"
-//#define BRANDY_PATCHDATE  "JGH190107-50BIRTHDAY"
+#define BRANDY_PATCHLEVEL "18"
+#define BRANDY_DATE  "15 Jan 2019"
 
 #ifndef __target_h
 #define __target_h
